--- a/package.json
+++ b/package.json
@@ -8,7 +8,6 @@
     "dev": "cross-env NODE_ENV=development nodemon ./src/server.js",
     "start": "cross-env NODE_ENV=production node ./src/server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
- 
   },
   "author": "gaurav kesh roushan",
   "license": "ISC",
@@ -25,6 +24,8 @@
     "dotenv-flow": "^4.1.0",
     "express": "^4.21.1",
     "express-rate-limit": "^7.4.1",
+    "firebase": "^11.0.2",
+    "firebase-admin": "^13.0.0",
     "helmet": "^8.0.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.7.3",
