--- a/.env.example
+++ b/.env.example
@@ -8,3 +8,9 @@ DATABASE_URL= MONGODB_DATABASE_URI
 
 
 #FireBase Credentials
+FIREBASE_API_KEY=
+FIREBASE_AUTH_DOMAIN=
+FIREBASE_PROJECT_ID=
+FIREBASE_STORAGE_BUCKET=
+FIREBASE_MESSAGING_SENDER_ID=
+FIREBASE_APP_ID=
